--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
 </div>
 
 <script>
-  const API_URL = "https://script.google.com/macros/s/AKfycbyMM-PU7pKtaXQk5zML4BYj6ifHLpl2TyhX91lKwLbyOA3QUr8r_Uf3FSFKf9WhD_E/exec"; 
+  // URL ATUALIZADA
+  const API_URL = "https://script.google.com/macros/s/AKfycbyYv0t7DP4zKuSvXH0F1moh1rVII0txlYKtH2c7V9VEMPs_Cxj3_qQJv00LisHmtKE/exec"; 
 
   let total = 0;
   let servicos = [];
